<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="anwar.ca.loancalculator.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:drawable="@color/abc_search_url_text">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="204dp"
            android:layout_height="489dp"
            android:weightSum="1">

       <!--     <TextView
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Loan_Amount"
                android:id="@+id/textView"
                android:layout_weight="0.15" />
-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Term_of_Loan"
                android:id="@+id/textView2"
                android:layout_weight="0.07" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Yearly_IR"
                android:id="@+id/textView3"
                android:layout_weight="0.05" />

            <Button
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:text="@string/Calculate"
                android:id="@+id/button"
                android:onClick="onClick"/>

            <TextView
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Results"
                android:id="@+id/textView4"
                android:layout_gravity="right"
                android:layout_weight="0.12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/monthly_payment"
                android:id="@+id/textView5"
                android:layout_weight="0.03" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Total_Payment"
                android:id="@+id/textView6"
                android:layout_weight="0.03" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Total_Interest"
                android:id="@+id/textView7"
                android:layout_weight="0.03" />

            <TextView
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textView12"
                android:layout_weight="0.07" />

            <TextView
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textView13"
                android:layout_weight="0.12" />

            <TextView
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textView14"
                android:layout_weight="0.14" />

            <TextView
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textView15"
                android:layout_weight="0.18" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="386dp"
            android:weightSum="1">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText3"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Clear"
                android:id="@+id/button2"
                android:onClick="onClear" />

            <TextView
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:layout_weight="0.12" />

            <TextView
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView8"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:layout_weight="0.04" />

            <TextView
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:id="@+id/textView9"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:id="@+id/textView10"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
